Fixed-Issue-#1266 Bug Report When a new post is added, the latest post section in the organization's dashboard becomes distorted Updated

--- a/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
+++ b/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
@@ -22,6 +22,11 @@
   justify-content: center;
   align-items: center;
 }
+
 .BottomRow {
-  margin-top: 45px;
+  margin-top: 30px;
+}
+
+.memeberShipCard {
+  height: 150px;
 }
